# Language-Identification-Tool

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: DATA_PROJECT_AI - English.csv  DATA_PROJECT_AI - Francais.csv  DATA_PROJECT_AI - Tiếng Việt.csv
data/test/: test.csv
data/validation/: .gitkeep  valid.csv
models/: naive_bayes_model.pkl  naive_bayes_model_metadata.json
src/: main.py  main_cuda.py
src/algorithms/classification/: naive_bayes.py  naive_bayes_cuda.py  naive_bayes_cuda_optimized.py
src/main/python/: main.py  main_cuda.py
src/main/python/algorithms/classification/: naive_bayes.py  naive_bayes_cuda_optimized.py
src/main/python/models/: language_name.py  text_processor.py
src/main/python/models/data/: abstract_data_loader.py  csv_loader.py  huggingface_loader.py
src/main/python/models/optimization/: learning_curve.py  smoothing_optimization.py
src/main/python/utils/: classification_report.py  dataset_comparison.py  model_evaluation.py
src/models/: language_name.py  text_processor.py
src/models/data/: __init__.py  abstract_data_loader.py  csv_loader.py  huggingface_loader.py
src/test/: test_data.py
